15-Feb-2016 Fixes #299. Added support for assembler tools in the C package. Assemblers have been provided for VisualC on Windows (ml, ml64), Clang on macOS (clang), and Gcc on Linux (gcc). Native, VisualStudio, MakeFile support is provided. Note that the class C.ObjectFile has been split, into C.ObjectFileBase (the base class for different types of ObjectFile), C.ObjectFile derives from ObjectFileBase and continues to be the output from a compilation step, and C.AssembledObjectFile is new and also derives from ObjectFileBase. Custom builder scripts, if previously casting to C.ObjectFile to get access to properties, may now have to cast to C.ObjectFileBase if assembly source files are included in the build.

12-Feb-2016 Fixes #298. When the Target name differed from the executable name in Xcode, a duplicate Scheme was created in order to debug it (same name but with a '2' suffix). This was due to a misconfigured LaunchActions in the Xcode scheme configuration generated by BAM.

11-Feb-2016 Fixes #201. When publishing a module (B) relative to another (A), B is now added as an order-only dependency to A. This ensures that the dependency graph is accurately reflected in IDE builds.

03-Feb-2016 Fixes #297. C/C++ static library archiving and binary linking may now perform additional timestamp checks on source files to ensure they are up-to-date in Native builds. This covers an edge case of failing to archive or link in incremental builds, when all dependent source files had been compiled in a previous build. The repo case for this is an SCM update of a number of source file in static libraries and applications, and compilation of all static library source is completed, but the application source fails to compile, and the static libraries are not re-archived; a subsequent build correcting the compilation error will result in link errors because the static libraries are still out of date.

04-Jan-2017 ======== Version 1.0.4 beta 2 Release ========
